--- a/network/solutions-mobile-backend-starter-android-client-master/res/layout/activity_main.xml
+++ b/network/solutions-mobile-backend-starter-android-client-master/res/layout/activity_main.xml
@@ -43,6 +43,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
+            <Button
+                android:id="@+id/getButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:text="Button" />
+
             <TextView
                 android:id="@+id/tvPosts"
                 android:layout_width="match_parent"
